versioned_docs/version-1.1.1/repo/embargo_topics.md
---
id: embargo_topics
title: Embargo topics
slug: embargo_topics
author: Nicole Jung
---

Embargos can be used to prepare data at any time and release the data at any time that is desired. The setting of an embargo is described in the pages [Publication and Review](/chemotionsaurus/docs/repo/embargo_topics). The release of embargos can only be done by the person who submitted the data to the repository. In principle, the release of data can be done at any time. For data that are part of a scientific publication, the release of the embargo is recommended be done either in parallel to the review process of the manuscript or after the acceptance of the manuscript. If reviewers should have access to the data, a reviewer-access to the embargo bundle can be requested. 

<!--truncate-->

## Request access to an embargo bundle for external reviewers

To request anonymous access to an embargo bundle, please sign in and select "embargoed publications" in the main navigation bar of the repository. Please select the embargo bundle for that you want to create are reviewer access option. All entries belonging to the embargo will appear and the "Anonymous" button is enabled.

![](/img/docs/move-change-release-embargo/7a5b05a7-35d8-435c-8e9d-f530ffe16f26_image_20200831-18167-3caooi.png)

![](/img/docs/move-change-release-embargo/7a5b05a7-35d8-435c-8e9d-f530ffe16f26_image_20200831-18167-1mo5uj5.png)

Please select "Anonymous". You will retrieve a message that the access data is sent to our email address. The given access data can be forwarded to the editors of a scientific journal or can be included directly to the Letter to the Editor if desired. 

![](/img/docs/move-change-release-embargo/7a5b05a7-35d8-435c-8e9d-f530ffe16f26_image_20200831-18167-6nexcp.png)


## Release an embargo

To release an embargo, all data that are part of the embargo bundle have to be reviewed successfully by the chemotion repository team (all set to accepted -> green). If you want to release only a part of a formerly generated embargo, you have to move open submissions with status "pending" or "reviewed" to another embargo bundle (see description below). 

Release: please open the "Embargoed Publications" panel and select an embargo as described above. Please select "Release".

![](/img/docs/move-change-release-embargo/7a5b05a7-35d8-435c-8e9d-f530ffe16f26_image_20200831-18167-mojbpo.png)

## Collection DOI

When the embargo is released, a Collection DOI is generated automatically by the system (embargoes released before 10.05.2022 are not included). You can see the Collection DOI link in the reaction/sample details page and through this link you can access to the DOI and metadata for the whole data collection.

![](/img/docs/move-change-release-embargo/collection_doi.gif)

## Change of contents for embargoed items

A change of embargoed items is in general not desired and part of the standard workflow of the repository. After the passing the internal review, all changes should be finished. If there are any mistakes that you become aware of after the the submissions were accepted, then please let the repository team know and contact us. In those cases, we can correct even those entries that are accepted and under embargo. Published items (after the release of the embargo) can't be changed any more. 

## Move items to embargo bundle

Samples or reactions submitted to the Repository without embargo can be retroactively moved to embargo bundle after they have been reviewed. Simply use the transfer symbol given next to the entry in the "Reviewed" panel and select the desired embargo bundle.

![](/img/docs/move-change-release-embargo/change_embargo_bundle_edit_0.gif)

## Move items to another embargo bundle

Samples or reactions can be moved to another existing embargo bundle or can be moved to a new embargo bundle. Please use the transfer symbol given next to each entry in the "embargoed publications" panel. 

![](/img/docs/move-change-release-embargo/how_to_move_to_another_embargo.gif)
